--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ p {
 }
 .skybluebox {
 	width: 100%;
-	background-color: #00C8C8;
+	background-color: #009696;
 	color: white;
 	padding-top:100px;
 	padding-bottom: 100px;
