--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ p {
 .lightgreybox {
 	width: 100%;
 	background-color: #AEAEAE;
-	color: white;
+	color: #161616;
 	padding-top:100px;
 	padding-bottom: 100px;
 }
