--- a/style.css
+++ b/style.css
@@ -19,11 +19,11 @@ p {
 	width: 100%;
 	height: 100px;
 	color: white!important;
-	 box-shadow: 0px 5px 30px 5px #676767;
+	box-shadow: 0px 5px 30px 5px #676767;
 }
 .title {
 	position: absolute;
-	left: 110px;
+	left: 120px;
 	top: 30px;
 }
 .content {
@@ -50,10 +50,138 @@ p {
 	padding-top:100px;
 	padding-bottom: 100px;
 }
+.paragraphs {
+	margin-left: 400px;
+	margin-right: 400px;
+}
 .bluebox {
 	width: 100%;
 	background-color: #5d8cd8;
 	color: white;
 	padding-top:100px;
 	padding-bottom: 100px;
+}
+
+.dropbtn {
+	height: 100px;
+	width: 100px;
+	background-color: #5d8cd8;
+	border: none;
+	color: white;
+	font-size: 20px;
+	border-right: 1px solid #2c5290;
+}
+
+.dropdown {
+    	position: relative;
+    	display: inline-block;
+}
+
+.dropdown-content {
+    	display: none;
+    	position: absolute;
+	top: 100px;
+    	background-color: #f1f1f1;
+    	min-width: 200px;
+    	box-shadow: 0px 8px 16px 0px #676767;
+    	z-index: 1;
+}
+
+.dropdown-content a {
+    	color: black;
+    	padding: 12px 16px;
+    	text-decoration: none;
+    	display: block;
+}
+
+.dropdown-content a:hover {background-color: #ddd}
+
+.dropdown:hover .dropdown-content {
+    	display: block;
+}
+
+.dropdown:hover .dropbtn {
+	transition: 0.3s;
+    	background-color: #5275ae;
+}
+.links {
+	text-decoration: none;
+	font-size: 25px;
+	color: white;
+	border: 1px solid white;
+	padding: 12px 16px;
+	border-radius: 5px;
+}
+.links:hover {
+	background-color: #4b9898;
+	transition: 0.3s;
+}
+.links2 {
+	color: #161616;
+	font-size: 25px;
+	border: 1px solid #161616;
+	padding: 12px 16px;
+	border-radius: 5px;
+	text-decoration: none;
+}
+.links2:hover {
+	background-color: #bfbfbf;
+	transition: 0.3s;
+}
+.dropbtn2 {
+	width: 200px;
+	background-color: #f1f1f1;
+	border: none;
+	color: black;
+	font-family: "Montserrat", sans-serif;
+	font-size: 16px;
+	text-align: left;
+	padding-top: 0px;
+	padding-bottom: 0px;
+}
+.dropbtn2 a {
+	color: black;
+  	text-decoration: none;
+  	display: block;
+	padding-left: 10px!important;
+}
+.dropdown2 {
+    	position: relative;
+    	display: inline-block;
+}
+
+.dropdown-content2 {
+  	display: none;
+  	position: absolute;
+	top: 0px;
+	left: 200px;
+  	background-color: #f1f1f1;
+  	min-width: 200px;
+  	box-shadow: 0px 8px 16px 0px #676767;
+  	z-index: 1;
+}
+
+.dropdown-content2 a {
+    	color: black;
+    	padding: 12px 16px;
+    	text-decoration: none;
+    	display: block;
+}
+
+.dropdown-content2 a:hover {background-color: #ddd}
+
+.dropdown2:hover .dropdown-content2 {
+    	display: block;
+}
+
+.dropdown2:hover .dropbtn2 {
+	transition: 0.3s;
+    	background-color: #ddd;
+}
+
+@media screen and (max-width: 1000px) {
+    .paragraphs {
+        margin-left: 50px!important;
+	margin-right: 50px!important;
+    }
 }
