--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ h1 {
 	margin-bottom: 0px;
 }
 p {
+
 	margin-top: 0px;
 	margin-bottom: 0px;
 	}
@@ -33,8 +34,8 @@ p {
 .whitebox {
 	width: 100%;
 	color: #161616;
-	padding-top:100px;
-	padding-bottom: 100px;
+	padding-top:50px;
+	padding-bottom: 50px;
 }
 .skybluebox {
 	width: 100%;
@@ -198,4 +199,37 @@ p {
 	h2 {
 		font-size: 2.5vw;
 	}
+}
+
+.parallax { 
+    background-image: url("12.jpg");
+    height: 300px; 
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+.parallax2 { 
+    background-image: url("10.jpg");
+    height: 300px; 
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+.parallax3 { 
+    background-image: url("7.jpg");
+    height: 300px; 
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+.parallax4 { 
+    background-image: url("6.jpg");
+    height: 300px; 
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
