--- a/style.css
+++ b/style.css
@@ -10,6 +10,9 @@ h1 {
 	margin-top: 0px;
 	margin-bottom: 0px;
 }
+h2 {
+	margin-top: 0px;
+}
 p {
 
 	margin-top: 0px;
@@ -20,7 +23,7 @@ p {
 	width: 100%;
 	height: 100px;
 	color: white!important;
-	box-shadow: 0px 5px 30px 5px #676767;
+	z-index: 2;
 }
 .title {
 	position: absolute;
@@ -30,12 +33,15 @@ p {
 .content {
 	text-align: center;
 	font-size: 20px;
+	position: absolute;
+	z-index: -11;
 }
 .whitebox {
 	width: 100%;
+	background-color: white;
 	color: #161616;
-	padding-top:50px;
-	padding-bottom: 50px;
+	padding-top:75px;
+	padding-bottom: 75px;
 }
 .skybluebox {
 	width: 100%;
@@ -69,6 +75,7 @@ p {
 	background-color: #5d8cd8;
 	border: none;
 	color: white;
+	transition: 0.3s;
 	font-size: 20px;
 	border-right: 1px solid #2c5290;
 }
@@ -79,15 +86,18 @@ p {
 }
 
 .dropdown-content {
-    	display: none;
-    	position: absolute;
-	top: 100px;
-    	background-color: #f1f1f1;
-    	min-width: 200px;
-    	box-shadow: 0px 8px 16px 0px #676767;
-    	z-index: 1;
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 200px;
+    z-index: -1;
+	-webkit-animation-name: drop;
+	-webkit-animation-duration: 1s;
 }
-
+@keyframes drop {
+	from {top: -50px;}
+	to {top: 100px;}
+}
 .dropdown-content a {
     	color: black;
     	padding: 12px 16px;
@@ -124,6 +134,8 @@ p {
 	padding: 12px 16px;
 	border-radius: 5px;
 	text-decoration: none;
+	transition: 0.3s;
+	background-color: white;
 }
 .links2:hover {
 	background-color: #bfbfbf;
@@ -158,17 +170,14 @@ p {
 	left: 200px;
   	background-color: #f1f1f1;
   	min-width: 200px;
-  	box-shadow: 0px 8px 16px 0px #676767;
-  	z-index: 1;
+  	z-index: -2;
+	-webkit-animation-name: slide;
+	-webkit-animation-duration: 1s;
 }
-
-.dropdown-content2 a {
-    	color: black;
-    	padding: 12px 16px;
-    	text-decoration: none;
-    	display: block;
+@keyframes slide {
+	from {left: 0px;}
+	to {left: 200px;}
 }
-
 .dropdown-content2 a:hover {background-color: #ddd}
 
 .dropdown2:hover .dropdown-content2 {
@@ -197,7 +206,7 @@ p {
 		padding: 1.5vw 1.5vw;
 	}
 	h2 {
-		font-size: 2.5vw;
+		font-size: 2.8vw;
 	}
 }
 
@@ -232,4 +241,37 @@ p {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+}
+#page {
+	display: none;
+}
+#loader {
+	display: block;
+	position: absolute;
+	left: 50%;
+	top: 50%;
+	z-index: 1;
+	width: 150px;
+	height: 150px;
+	margin: -75px 0 0 -75px;
+	border: 16px solid #f3f3f3;
+	border-radius: 50%;
+	border-top: 16px solid #3498db;
+	width: 120px;
+	height: 120px;
+	-webkit-animation: spin 2s linear infinite;
+	animation: spin 2s linear infinite;
+}
+@-webkit-keyframes spin {
+	0% { -webkit-transform: rotate(0deg); }
+	100% { -webkit-transform: rotate(360deg); }
+}
+
+@keyframes spin {
+	0% { transform: rotate(0deg); }
+	100% { transform: rotate(360deg); }
+}
+
+.index {
+	z-index: -2;
 }
