--- a/style.css
+++ b/style.css
@@ -275,3 +275,53 @@ p {
 .index {
 	z-index: -2;
 }
+.main-box {
+	background-color: white;
+	padding: 60px;
+	margin-left: 150px;
+	margin-right: 150px;
+	margin-top: 75px;
+	text-align: center;
+}
+.q1Button {
+	display: inline;
+	width: 100%;
+	height: 40px;
+	background-color: white;
+	border: 1px solid #d9d9d9;
+	text-align: left;
+	margin-top: 20px;
+	box-shadow: 5px 5px 10px 3px #d9d9d9;
+}
+img {
+	height: 20px;
+	width: 20px;
+	float: left;
+}
+h3 {
+	margin-top: 0px;
+	margin-bottom: 0px;
+	margin-left: 30px;
+}
+.quarterDrop {
+
+}
+.quarterContent {
+	display: none;
+	border-left: 1px solid #d9d9d9;
+	border-right: 1px solid #d9d9d9;
+	border-bottom: 1px solid #d9d9d9;
+	background-color: white;
+	padding-top: 20px;
+	padding-bottom: 20px;
+	box-shadow: 5px 5px 10px 3px #d9d9d9;
+}
+.quarterDrop:hover .quarterContent {
+	display: block;
+}
+.quarterDrop:hover {
+	box-shadow: 0px 0px 10px 0px #d9d9d9;
+}
+h4 {
+	margin: 0px;
+}
