--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@ p {
 	font-size: 20px;
 	position: absolute;
 	z-index: -11;
+	width: 100%;
 }
 .whitebox {
 	width: 100%;
@@ -282,6 +283,7 @@ p {
 	margin-right: 150px;
 	margin-top: 75px;
 	text-align: center;
+	display: relative;
 }
 .q1Button {
 	display: inline;
@@ -319,8 +321,8 @@ h3 {
 .quarterDrop:hover .quarterContent {
 	display: block;
 }
-.quarterDrop:hover {
-	box-shadow: 0px 0px 10px 0px #d9d9d9;
+.quarterDrop:hover .q1Button {
+	box-shadow: 7px 0px 10px 0px #d9d9d9;
 }
 h4 {
 	margin: 0px;
