--- a/style.css
+++ b/style.css
@@ -93,7 +93,7 @@ p {
     min-width: 200px;
     z-index: -1;
 	-webkit-animation-name: drop;
-	-webkit-animation-duration: 1s;
+	-webkit-animation-duration: 0.5s;
 }
 @keyframes drop {
 	from {top: -50px;}
@@ -173,7 +173,7 @@ p {
   	min-width: 200px;
   	z-index: -2;
 	-webkit-animation-name: slide;
-	-webkit-animation-duration: 1s;
+	-webkit-animation-duration: 0.5s;
 }
 @keyframes slide {
 	from {left: 0px;}
@@ -260,8 +260,8 @@ p {
 	border-top: 16px solid #3498db;
 	width: 120px;
 	height: 120px;
-	-webkit-animation: spin 2s linear infinite;
-	animation: spin 2s linear infinite;
+	-webkit-animation: spin 1s linear infinite;
+	animation: spin 1s linear infinite;
 }
 @-webkit-keyframes spin {
 	0% { -webkit-transform: rotate(0deg); }
@@ -319,11 +319,16 @@ h3 {
 	box-shadow: 5px 5px 10px 3px #d9d9d9;
 }
 .quarterDrop:hover .quarterContent {
-	display: block;
+	display: grid;
 }
 .quarterDrop:hover .q1Button {
 	box-shadow: 7px 0px 10px 0px #d9d9d9;
 }
 h4 {
 	margin: 0px;
+	
+}
+object {
+	width: 100%;
+	height: 450px;
 }
