--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
 	font-family: "Montserrat", sans-serif;
-	color: #212121;
+	color: #4a4a4a;
 	margin-left: 0px;
 	margin-right: 0px;
 	margin-top: 0px;
@@ -40,7 +40,6 @@ p {
 .whitebox {
 	width: 100%;
 	background-color: white;
-	color: #161616;
 	padding-top:75px;
 	padding-bottom: 75px;
 }
@@ -295,7 +294,7 @@ p {
 	margin-top: 20px;
 	box-shadow: 5px 5px 10px 3px #d9d9d9;
 }
-img {
+.Dropimg {
 	height: 20px;
 	width: 20px;
 	float: left;
@@ -319,7 +318,7 @@ h3 {
 	box-shadow: 5px 5px 10px 3px #d9d9d9;
 }
 .quarterDrop:hover .quarterContent {
-	display: grid;
+	display: block;
 }
 .quarterDrop:hover .q1Button {
 	box-shadow: 7px 0px 10px 0px #d9d9d9;
@@ -331,4 +330,7 @@ h4 {
 object {
 	width: 100%;
 	height: 450px;
+}
+.pikto {
+	width: 845px;
 }
