--- a/style.css
+++ b/style.css
@@ -41,6 +41,7 @@ p {
 	width: 100%;
 	background-color: white;
 	padding-top:75px;
+	padding-color: white;
 	padding-bottom: 75px;
 }
 .skybluebox {
@@ -58,8 +59,9 @@ p {
 	padding-bottom: 100px;
 }
 .paragraphs {
-	margin-left: 400px;
 	margin-right: 400px;
+	margin-left: 400px;
+	
 }
 .bluebox {
 	width: 100%;
