--- a/style.css
+++ b/style.css
@@ -216,7 +216,7 @@ p {
     background-image: url("12.jpg");
     height: 300px; 
     background-attachment: fixed;
-    background-position: center;
+    background-position: top;
     background-repeat: no-repeat;
     background-size: cover;
 }
@@ -232,7 +232,7 @@ p {
     background-image: url("7.jpg");
     height: 300px; 
     background-attachment: fixed;
-    background-position: center;
+    background-position: bottom;
     background-repeat: no-repeat;
     background-size: cover;
 }
