--- a/style.css
+++ b/style.css
@@ -1,348 +1,164 @@
-body {
-	font-family: "Montserrat", sans-serif;
-	color: #4a4a4a;
-	margin-left: 0px;
-	margin-right: 0px;
-	margin-top: 0px;
-	margin-bottom: 0px;
+@charset "utf-8";
+/* CSS Document */
+body
+{
+	margin: 0px;
+	font-family: Arial;
 }
-h1 {
-	margin-top: 0px;
-	margin-bottom: 0px;
-}
-h2 {
-	margin-top: 0px;
-}
-p {
-
-	margin-top: 0px;
-	margin-bottom: 0px;
-	}
-.headerbox {
-	background-color: #5d8cd8;
-	width: 100%;
-	height: 100px;
-	color: white!important;
-	z-index: 2;
-}
-.title {
-	position: absolute;
-	left: 120px;
-	top: 30px;
-}
-.content {
-	text-align: center;
-	font-size: 20px;
-	position: absolute;
-	z-index: -11;
-	width: 100%;
-}
-.whitebox {
-	width: 100%;
-	background-color: white;
-	padding-top:75px;
-	padding-color: white;
-	padding-bottom: 75px;
-}
-.skybluebox {
-	width: 100%;
-	background-color: #309292;
-	color: white;
-	padding-top:100px;
-	padding-bottom: 100px;
-}
-.lightgreybox {
-	width: 100%;
-	background-color: #AEAEAE;
-	color: #161616;
-	padding-top:100px;
-	padding-bottom: 100px;
-}
-.paragraphs {
-	margin-right: 400px;
-	margin-left: 400px;
-	
-}
-.bluebox {
-	width: 100%;
-	background-color: #5d8cd8;
-	color: white;
-	padding-top:100px;
-	padding-bottom: 100px;
-}
-
-.dropbtn {
-	height: 100px;
-	width: 100px;
-	background-color: #5d8cd8;
-	border: none;
-	color: white;
-	transition: 0.3s;
-	font-size: 20px;
-	border-right: 1px solid #2c5290;
-}
-
-.dropdown {
-    	position: relative;
-    	display: inline-block;
-}
-
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f1f1f1;
-    min-width: 200px;
-    z-index: -1;
-	-webkit-animation-name: drop;
-	-webkit-animation-duration: 0.5s;
-}
-@keyframes drop {
-	from {top: -50px;}
-	to {top: 100px;}
-}
-.dropdown-content a {
-    	color: black;
-    	padding: 12px 16px;
-    	text-decoration: none;
-    	display: block;
-}
-
-.dropdown-content a:hover {background-color: #ddd}
-
-.dropdown:hover .dropdown-content {
-    	display: block;
-}
-
-.dropdown:hover .dropbtn {
-	transition: 0.3s;
-    	background-color: #5275ae;
-}
-.links {
-	text-decoration: none;
-	font-size: 25px;
-	color: white;
-	border: 1px solid white;
-	padding: 12px 16px;
-	border-radius: 5px;
-}
-.links:hover {
-	background-color: #4b9898;
-	transition: 0.3s;
-}
-.links2 {
-	color: #161616;
-	font-size: 25px;
-	border: 1px solid #161616;
-	padding: 12px 16px;
-	border-radius: 5px;
-	text-decoration: none;
-	transition: 0.3s;
-	background-color: white;
-}
-.links2:hover {
-	background-color: #bfbfbf;
-	transition: 0.3s;
-}
-.dropbtn2 {
-	width: 200px;
-	background-color: #f1f1f1;
-	border: none;
-	color: black;
-	font-family: "Montserrat", sans-serif;
-	font-size: 16px;
-	text-align: left;
-	padding-top: 0px;
-	padding-bottom: 0px;
-}
-.dropbtn2 a {
-	color: black;
-  	text-decoration: none;
-  	display: block;
-	padding-left: 10px!important;
-}
-.dropdown2 {
-    	position: relative;
-    	display: inline-block;
-}
-
-.dropdown-content2 {
-  	display: none;
-  	position: absolute;
-	top: 0px;
-	left: 200px;
-  	background-color: #f1f1f1;
-  	min-width: 200px;
-  	z-index: -2;
-	-webkit-animation-name: slide;
-	-webkit-animation-duration: 0.5s;
-}
-@keyframes slide {
-	from {left: 0px;}
-	to {left: 200px;}
-}
-.dropdown-content2 a:hover {background-color: #ddd}
-
-.dropdown2:hover .dropdown-content2 {
-    	display: block;
-}
-
-.dropdown2:hover .dropbtn2 {
-	transition: 0.3s;
-    	background-color: #ddd;
-}
-
-@media screen and (max-width: 1100px) {
-    .paragraphs {
-        margin-left: 50px!important;
-		margin-right: 50px!important;
-    }
-	p {
-		font-size: 2vw;
-	}
-	.links {
-		font-size: 2vw;
-		padding: 1.5vw 1.5vw;
-	}
-	.links2 {
-		font-size: 2vw;
-		padding: 1.5vw 1.5vw;
-	}
-	h2 {
-		font-size: 2.8vw;
-	}
-}
-
-.parallax { 
-    background-image: url("12.jpg");
-    height: 300px; 
-    background-attachment: fixed;
-    background-position: top;
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-.parallax2 { 
-    background-image: url("10.jpg");
-    height: 300px; 
-    background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-.parallax3 { 
-    background-image: url("7.jpg");
-    height: 300px; 
-    background-attachment: fixed;
-    background-position: bottom;
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-.parallax4 { 
-    background-image: url("6.jpg");
-    height: 300px; 
-    background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-#page {
-	display: none;
-}
-#loader {
-	display: block;
-	position: absolute;
-	left: 50%;
-	top: 50%;
-	z-index: 1;
-	width: 150px;
-	height: 150px;
-	margin: -75px 0 0 -75px;
-	border: 16px solid #f3f3f3;
-	border-radius: 50%;
-	border-top: 16px solid #3498db;
-	width: 120px;
-	height: 120px;
-	-webkit-animation: spin 1s linear infinite;
-	animation: spin 1s linear infinite;
-}
-@-webkit-keyframes spin {
-	0% { -webkit-transform: rotate(0deg); }
-	100% { -webkit-transform: rotate(360deg); }
-}
-
-@keyframes spin {
-	0% { transform: rotate(0deg); }
-	100% { transform: rotate(360deg); }
-}
-
-.index {
-	z-index: -2;
-}
-.main-box {
-	background-color: white;
-	padding: 60px;
-	margin-left: 150px;
-	margin-right: 150px;
-	margin-top: 75px;
-	text-align: center;
-	display: relative;
-}
-.q1Button {
-	display: inline;
-	width: 100%;
-	height: 40px;
-	background-color: white;
-	border: 1px solid #d9d9d9;
-	text-align: left;
-	margin-top: 20px;
-	box-shadow: 5px 5px 10px 3px #d9d9d9;
-}
-.Dropimg {
-	height: 20px;
-	width: 20px;
-	float: left;
-}
-h3 {
-	margin-top: 0px;
-	margin-bottom: 0px;
-	margin-left: 30px;
-}
-.quarterDrop {
-
-}
-.quarterContent {
-	display: none;
-	border-left: 1px solid #d9d9d9;
-	border-right: 1px solid #d9d9d9;
-	border-bottom: 1px solid #d9d9d9;
-	background-color: white;
+.titleBar 
+{
+	color: #1a1a1a;
+	padding-left: 50px;
 	padding-top: 20px;
 	padding-bottom: 20px;
-	box-shadow: 5px 5px 10px 3px #d9d9d9;
+	background-color: #ccccff;
 }
-.quarterDrop:hover .quarterContent {
-	display: block;
+.parallax { 
+    background-image: url("mainBack.jpeg");
+    height: 300px; 
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
-.quarterDrop:hover .q1Button {
-	box-shadow: 7px 0px 10px 0px #d9d9d9;
+#paragraph
+{
+	margin-left: 200px;
+	margin-right: 200px;
+	padding-left: 100px;
+	padding-right: 100px;
+	border-right-width: 2px;
+	border-color: grey;
+	font-size: 20px;
+	text-align: center;
 }
-h4 {
+#myBtn
+{
+	margin-left: 310px;
+	margin-bottom: 50px;
+	background-color: #ccccff;
+	padding:10px;
+	border: none;
+	font-size: 20px;
+	border-radius: 5px;
+}
+#more {display: none;}
+h1
+{
 	margin: 0px;
-	
 }
-object {
-	width: 100%;
-	height: 450px;
+h2 
+{
+	margin: 0px;
 }
-.pikto {
-	width: 845px;
+.mySlides {display: none}
+img {vertical-align: middle;}
+
+/* Slideshow container */
+.slideshow-container {
+  max-width: 1200px;
+  max-height: 800px;
+  position: relative;
+  margin: auto;
+  overflow: hidden;
 }
-.top-box {
-	margin-bottom: 75px;
-	padding-bottom: 80px;
-	border-bottom: 1px solid #a2a0a0;
+
+/* Next & previous buttons */
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  padding: 16px;
+  margin-top: -22px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
 }
-.content-box {
-	margin-bottom: 75px;
-	padding-bottom: 75px;
-	border-bottom: 1px solid #a2a0a0;
+
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover, .next:hover {
+  background-color: rgba(0,0,0,0.8);
+}
+
+/* Caption text */
+.text {
+  color: black;
+  font-size: 20px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 100px;
+  width: 80%;
+  height: 70%;
+  margin-left: 100px;
+  margin-right: 100px;
+  background-color: rgba(265, 265, 265, 0.6);
+  text-align: center;
+}
+.title {
+  color: #f2f2f2;
+  font-size: 30px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  height: 90%;
+  text-shadow: 1px 1px black;
+  text-align: center;
+}
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.active, .dot:hover {
+  background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 1.5s;
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@-webkit-keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
+}
+
+@keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
+}
+
+/* On smaller screens, decrease text size */
+@media only screen and (max-width: 300px) {
+  .prev, .next,.text {font-size: 11px}
 }
